--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -314,11 +314,12 @@
     <ImageContentTask Include="Assets\sprite\preset\fade.png" />
   </ItemGroup>
   <ItemGroup>
-    <ImageContentTask Include="Assets\sprite\HotBar.png" />
-    <ImageContentTask Include="Assets\sprite\SelectBar.png" />
+    <ImageContentTask Include="Assets\sprite\ItemIcon\PickaxeIcon.png" />
   </ItemGroup>
   <ItemGroup>
-    <ImageContentTask Include="Assets\sprite\ItemIcon\PickaxeIcon.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\HotBar.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\inbentori.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\SelectBar.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
