--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -389,9 +389,10 @@
     <ImageContentTask Include="Assets\sprite\preset\fade.png">
       <Filter>Assets\sprite\preset</Filter>
     </ImageContentTask>
-    <ImageContentTask Include="Assets\sprite\HotBar.png" />
-    <ImageContentTask Include="Assets\sprite\SelectBar.png" />
     <ImageContentTask Include="Assets\sprite\ItemIcon\PickaxeIcon.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\HotBar.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\inbentori.png" />
+    <ImageContentTask Include="Assets\sprite\ItemUI\SelectBar.png" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
