--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -121,6 +121,9 @@
     <ClCompile Include="Item\GameItemTool.cpp" />
     <ClCompile Include="Item\GameItemBase.cpp" />
     <ClCompile Include="Status\Inventory.cpp" />
+    <ClCompile Include="TerrainManager\TerrainChunkData.cpp">
+      <Filter>TerrainManager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -369,6 +372,9 @@
     <ClInclude Include="Item\GameItemTool.h" />
     <ClInclude Include="Item\GameItemBase.h" />
     <ClInclude Include="Status\Inventory.h" />
+    <ClInclude Include="TerrainManager\TerrainChunkData.h">
+      <Filter>TerrainManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
