設置物の採取物に関するデータの編集処理の途中。

--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ToolEditor\Command\PlacementObjectCommand.cs" />
     <Compile Include="UserControl\PlacementObjectPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
