設置物から採取できるアイテムを登録できるようにした。

--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -73,7 +73,7 @@
     <Compile Include="ToolEditor\File\LoadItemDataList.cs" />
     <Compile Include="ToolEditor\File\SaveItemDataList.cs" />
     <Compile Include="ToolEditor\File\SelectDataFile.cs" />
-    <Compile Include="ToolEditor\ToolData.cs" />
+    <Compile Include="ToolEditor\ItemData.cs" />
     <Compile Include="ToolEditor\Command\ToolDataCommand.cs" />
     <Compile Include="ToolEditor\ToolKindsComboBox.cs" />
     <EmbeddedResource Include="Form1.resx">
