--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -117,17 +117,15 @@
     <ClCompile Include="ItemBar.cpp" />
     <ClCompile Include="Item\GameItemTool.cpp" />
     <ClCompile Include="Item\GameItemBase.cpp" />
-    <ClCompile Include="Status\Inventory.cpp" />
     <ClCompile Include="TerrainManager\TerrainChunkData.cpp">
       <Filter>TerrainManager</Filter>
     </ClCompile>
     <ClCompile Include="Item\BlockItem.cpp" />
     <ClCompile Include="MultiThread\Thread.cpp" />
     <ClCompile Include="AccessObject\AccessObject.cpp" />
-    <ClCompile Include="AstarForWorldTableData.cpp">
-      <Filter>Navigation</Filter>
-    </ClCompile>
     <ClCompile Include="NaviMeshManager.cpp" />
+    <ClCompile Include="Player\Inventory.cpp" />
+    <ClCompile Include="PlayerDead.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -372,7 +370,6 @@
     <ClInclude Include="ItemBar.h" />
     <ClInclude Include="Item\GameItemTool.h" />
     <ClInclude Include="Item\GameItemBase.h" />
-    <ClInclude Include="Status\Inventory.h" />
     <ClInclude Include="TerrainManager\TerrainChunkData.h">
       <Filter>TerrainManager</Filter>
     </ClInclude>
@@ -381,10 +378,9 @@
     <ClInclude Include="AccessObject\AccessObject.h" />
     <ClInclude Include="RayTest.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="AstarForWorldTableData.h">
-      <Filter>Navigation</Filter>
-    </ClInclude>
     <ClInclude Include="NaviMeshManager.h" />
+    <ClInclude Include="Player\Inventory.h" />
+    <ClInclude Include="PlayerDead.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
@@ -409,7 +405,6 @@
     <ImageContentTask Include="Assets\sprite\ItemUI\HotBar.png" />
     <ImageContentTask Include="Assets\sprite\ItemUI\inbentori.png" />
     <ImageContentTask Include="Assets\sprite\ItemUI\SelectBar.png" />
-    <ImageContentTask Include="Assets\sprite\Root.png" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -523,8 +518,5 @@
     <Filter Include="nlohmann\thirdparty\hedley">
       <UniqueIdentifier>{366bc28c-681a-43b1-9009-3f8cc62ed50e}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Game.rc" />
   </ItemGroup>
 </Project>
