食料などのアイテムのデータを変更できるようにした。 HP回復、水分、満腹度、スタミナ

--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MyUserControl\MaterialPanel.Designer.cs">
       <DependentUpon>MaterialPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="ToolEditor\Command\FoodAndCureCommand.cs" />
     <Compile Include="ToolEditor\Command\PlacementObjectCommand.cs" />
     <Compile Include="MyUserControl\PlacementObjectPanel.cs">
       <SubType>UserControl</SubType>
