タイトルシーン用のクラス追加

--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="TerrainManager\TerrainWorld.cpp" />
     <ClCompile Include="Save\TerrainSave\TerrainSave.cpp" />
     <ClCompile Include="MultiThread\Thread.cpp" />
+    <ClCompile Include="Title\TitleScene.cpp" />
     <ClCompile Include="Tool\Tool.cpp" />
     <ClCompile Include="Tool\ToolDataFile.cpp" />
     <ClCompile Include="NaviMeshManager.cpp" />
@@ -313,6 +314,7 @@
     <ClInclude Include="TerrainManager\TerrainWorld.h" />
     <ClInclude Include="Save\TerrainSave\TerrainSave.h" />
     <ClInclude Include="MultiThread\Thread.h" />
+    <ClInclude Include="Title\TitleScene.h" />
     <ClInclude Include="Tool\Tool.h" />
     <ClInclude Include="Tool\ToolDataFile.h" />
     <ClInclude Include="NaviMeshManager.h" />
