--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -126,8 +126,8 @@
     <ClCompile Include="NaviMeshManager.cpp" />
     <ClCompile Include="IK\FootIK.cpp" />
     <ClCompile Include="Player\Inventory.cpp" />
-    <ClCompile Include="PlayerDead.cpp" />
     <ClCompile Include="Title\TitleScene.cpp" />
+    <ClCompile Include="Player\PlayerDead.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -383,8 +383,8 @@
     <ClInclude Include="NaviMeshManager.h" />
     <ClInclude Include="IK\FootIK.h" />
     <ClInclude Include="Player\Inventory.h" />
-    <ClInclude Include="PlayerDead.h" />
     <ClInclude Include="Title\TitleScene.h" />
+    <ClInclude Include="Player\PlayerDead.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
@@ -409,6 +409,9 @@
     <ImageContentTask Include="Assets\sprite\ItemUI\HotBar.png" />
     <ImageContentTask Include="Assets\sprite\ItemUI\inbentori.png" />
     <ImageContentTask Include="Assets\sprite\ItemUI\SelectBar.png" />
+    <ImageContentTask Include="Assets\sprite\BackColor.png" />
+    <ImageContentTask Include="Assets\sprite\respownBotton.png" />
+    <ImageContentTask Include="Assets\sprite\SelectBotton.png" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
