--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -110,9 +110,6 @@
       <Filter>Tool</Filter>
     </ClCompile>
     <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
-    <ClCompile Include="Tool\ToolDataFile.cpp">
-      <Filter>Tool</Filter>
-    </ClCompile>
     <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
     <ClCompile Include="ItemBar.cpp" />
     <ClCompile Include="Item\GameItemTool.cpp" />
@@ -128,6 +125,9 @@
     <ClCompile Include="Player\Inventory.cpp" />
     <ClCompile Include="Title\TitleScene.cpp" />
     <ClCompile Include="Player\PlayerDead.cpp" />
+    <ClCompile Include="Item\ItemDataFile.cpp">
+      <Filter>Tool</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -242,9 +242,6 @@
       <Filter>Tool</Filter>
     </ClInclude>
     <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
-    <ClInclude Include="Tool\ToolDataFile.h">
-      <Filter>Tool</Filter>
-    </ClInclude>
     <ClInclude Include="nlohmann\ordered_map.hpp">
       <Filter>nlohmann</Filter>
     </ClInclude>
@@ -385,6 +382,9 @@
     <ClInclude Include="Player\Inventory.h" />
     <ClInclude Include="Title\TitleScene.h" />
     <ClInclude Include="Player\PlayerDead.h" />
+    <ClInclude Include="Item\ItemDataFile.h">
+      <Filter>Tool</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
