--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -128,6 +128,7 @@
     <ClCompile Include="Item\ItemDataFile.cpp">
       <Filter>Tool</Filter>
     </ClCompile>
+    <ClCompile Include="Item\GameItemFoods.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -385,6 +386,7 @@
     <ClInclude Include="Item\ItemDataFile.h">
       <Filter>Tool</Filter>
     </ClInclude>
+    <ClInclude Include="Item\GameItemFoods.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
