--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -161,7 +161,7 @@
   <ItemGroup>
     <ClCompile Include="AccessObject\AccessObject.cpp" />
     <ClCompile Include="IK\FootIK.cpp" />
-    <ClCompile Include="IPlayerState.cpp" />
+    <ClCompile Include="Player\state\IPlayerState.cpp" />
     <ClCompile Include="Item\BlockItem.cpp" />
     <ClCompile Include="ItemBar.cpp" />
     <ClCompile Include="Item\GameItemTool.cpp" />
@@ -183,7 +183,7 @@
     <ClCompile Include="Enemy\IEnemyState.cpp" />
     <ClCompile Include="Navigation\NVMDebugDraw.cpp" />
     <ClCompile Include="Player\Inventory.cpp" />
-    <ClCompile Include="Player\PlayerDead.cpp" />
+    <ClCompile Include="Player\state\PlayerDead.cpp" />
     <ClCompile Include="Stage\Hill\Hill.cpp" />
     <ClCompile Include="Navigation\NVMGenerator.cpp" />
     <ClCompile Include="PlacementObject\PlacementObject.cpp" />
@@ -222,7 +222,7 @@
   <ItemGroup>
     <ClInclude Include="AccessObject\AccessObject.h" />
     <ClInclude Include="IK\FootIK.h" />
-    <ClInclude Include="IPlayerState.h" />
+    <ClInclude Include="Player\state\IPlayerState.h" />
     <ClInclude Include="Item\BlockItem.h" />
     <ClInclude Include="ItemBar.h" />
     <ClInclude Include="Item\GameItemTool.h" />
@@ -285,7 +285,7 @@
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley.hpp" />
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley_undef.hpp" />
     <ClInclude Include="Player\Inventory.h" />
-    <ClInclude Include="Player\PlayerDead.h" />
+    <ClInclude Include="Player\state\PlayerDead.h" />
     <ClInclude Include="RayTest.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SaveDataFile.h" />
