--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -124,11 +124,11 @@
     <ClCompile Include="IK\FootIK.cpp" />
     <ClCompile Include="Player\Inventory.cpp" />
     <ClCompile Include="Title\TitleScene.cpp" />
-    <ClCompile Include="Player\PlayerDead.cpp" />
+    <ClCompile Include="Player\state\PlayerDead.cpp" />
     <ClCompile Include="Item\ItemDataFile.cpp">
       <Filter>Tool</Filter>
     </ClCompile>
-    <ClCompile Include="IPlayerState.cpp" />
+    <ClCompile Include="Player\state\IPlayerState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -382,11 +382,11 @@
     <ClInclude Include="IK\FootIK.h" />
     <ClInclude Include="Player\Inventory.h" />
     <ClInclude Include="Title\TitleScene.h" />
-    <ClInclude Include="Player\PlayerDead.h" />
+    <ClInclude Include="Player\state\PlayerDead.h" />
     <ClInclude Include="Item\ItemDataFile.h">
       <Filter>Tool</Filter>
     </ClInclude>
-    <ClInclude Include="IPlayerState.h" />
+    <ClInclude Include="Player\state\IPlayerState.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
