--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -129,6 +129,7 @@
       <Filter>Tool</Filter>
     </ClCompile>
     <ClCompile Include="Player\state\IPlayerState.cpp" />
+    <ClCompile Include="MauseInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -387,6 +388,7 @@
       <Filter>Tool</Filter>
     </ClInclude>
     <ClInclude Include="Player\state\IPlayerState.h" />
+    <ClInclude Include="MauseInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
