描画関係を大幅に変えていく。

--- a/Maybe3DaysToDie/MiniEngine/MiniEngine.vcxproj
+++ b/Maybe3DaysToDie/MiniEngine/MiniEngine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="camera\Camera.cpp" />
     <ClCompile Include="characterController\CharacterController.cpp" />
+    <ClCompile Include="graphics\RendererManager.cpp" />
     <ClCompile Include="gameObject\GameObjectManager.cpp" />
     <ClCompile Include="gameObject\IGameObject.cpp" />
     <ClCompile Include="graphics\2D\Sprite.cpp" />
@@ -60,6 +61,7 @@
     <ClCompile Include="graphics\Model\UserMaterial.cpp" />
     <ClCompile Include="HID\GamePad.cpp" />
     <ClCompile Include="Input\InputKeyCode.cpp" />
+    <ClCompile Include="graphics\IRenderer.cpp" />
     <ClCompile Include="level\Level.cpp" />
     <ClCompile Include="level\MapChip.cpp" />
     <ClCompile Include="level\MapChipRender.cpp" />
@@ -107,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="characterController\CharacterController.h" />
+    <ClInclude Include="graphics\RendererManager.h" />
     <ClInclude Include="EngineStruct.h" />
     <ClInclude Include="gameObject\GameObjectManager.h" />
     <ClInclude Include="gameObject\IGameObject.h" />
@@ -131,6 +134,7 @@
     <ClInclude Include="graphics\Primitive.h" />
     <ClInclude Include="graphics\Model\UserMaterial.h" />
     <ClInclude Include="Input\InputKeyCode.h" />
+    <ClInclude Include="graphics\IRenderer.h" />
     <ClInclude Include="level\Level.h" />
     <ClInclude Include="level\MapChip.h" />
     <ClInclude Include="level\MapChipRender.h" />
