--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -165,7 +165,6 @@
     <ClCompile Include="IK\FootIK.cpp" />
     <ClCompile Include="MapLoad\MapLoad.cpp" />
     <ClCompile Include="MauseInfo.cpp" />
-    <ClCompile Include="PlayerIdle.cpp" />
     <ClCompile Include="Player\state\IPlayerState.cpp" />
     <ClCompile Include="Item\BlockItem.cpp" />
     <ClCompile Include="ItemBar.cpp" />
@@ -189,6 +188,7 @@
     <ClCompile Include="Navigation\NVMDebugDraw.cpp" />
     <ClCompile Include="Player\Inventory.cpp" />
     <ClCompile Include="Player\state\PlayerDead.cpp" />
+    <ClCompile Include="Player\state\PlayerIdle.cpp" />
     <ClCompile Include="Stage\Hill\Hill.cpp" />
     <ClCompile Include="Navigation\NVMGenerator.cpp" />
     <ClCompile Include="PlacementObject\PlacementObject.cpp" />
@@ -231,7 +231,6 @@
     <ClInclude Include="IK\FootIK.h" />
     <ClInclude Include="MapLoad\MapLoad.h" />
     <ClInclude Include="MauseInfo.h" />
-    <ClInclude Include="PlayerIdle.h" />
     <ClInclude Include="Player\state\IPlayerState.h" />
     <ClInclude Include="Item\BlockItem.h" />
     <ClInclude Include="ItemBar.h" />
@@ -296,6 +295,7 @@
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley_undef.hpp" />
     <ClInclude Include="Player\Inventory.h" />
     <ClInclude Include="Player\state\PlayerDead.h" />
+    <ClInclude Include="Player\state\PlayerIdle.h" />
     <ClInclude Include="RayTest.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SaveDataFile.h" />
