--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="IK\FootIK.cpp" />
     <ClCompile Include="MapLoad\MapLoad.cpp" />
     <ClCompile Include="MauseInfo.cpp" />
+    <ClCompile Include="Player\state\PlayerWalk.cpp" />
     <ClCompile Include="Player\state\IPlayerState.cpp" />
     <ClCompile Include="Item\BlockItem.cpp" />
     <ClCompile Include="ItemBar.cpp" />
@@ -231,6 +232,7 @@
     <ClInclude Include="IK\FootIK.h" />
     <ClInclude Include="MapLoad\MapLoad.h" />
     <ClInclude Include="MauseInfo.h" />
+    <ClInclude Include="Player\state\PlayerWalk.h" />
     <ClInclude Include="Player\state\IPlayerState.h" />
     <ClInclude Include="Item\BlockItem.h" />
     <ClInclude Include="ItemBar.h" />
